--- a/Makefile.am
+++ b/Makefile.am
@@ -9,3 +9,5 @@ libtelnet_include_HEADERS = libtelnet.h
 lib_LTLIBRARIES = libtelnet.la
 libtelnet_la_SOURCES = libtelnet.c libtelnet.h
 libtelnet_la_LDFLAGS = -version-info 1:0:0
+
+ACLOCAL_AMFLAGS = -I m4
